<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.helloworld.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#007fff"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/titre"
        android:textColor="#ffffff"
        android:textSize="25sp" />

    <ScrollView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/header" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/error_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/error"
                android:textColor="#ed0000"
                android:textSize="24sp"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nom_uti"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/userEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mdp"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/mdpEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
            
            <ProgressBar android:id="@+id/loader"
                android:visibility="gone"
                android:layout_width="60dp"
                android:layout_height="60dp"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/vider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/vider" />

        <Button
            android:id="@+id/envoyer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/envoyer" />
    </LinearLayout>

</RelativeLayout>